--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "Skin Beauty Glitters"
+  subheading: "Get quality services and solutions to your skin problems"
   banner: "your awesome url"
